# prefigure

./: .dockerignore  .gitignore  CMakeLists.txt  README.md  _drill_trace.py  _drill_workercalls.py  _inspect_trace.py  correctness_comparison.py  doenet_integration_notes.md  export_tree.py  phase_a_findings.md  phase_b_findings.md  profile.sh  profiling_comparison.py  profiling_dropdown_vs_drag.md  pyproject.toml  realtime_pipeline_notes.md  verify_tests.sh
.github/workflows/: build-and-deploy.yml  build-wheels.yml  deploy-nightly.yml  release.yml  tests.yml
prefig/: engine.py
prefig/core/: label_tools.py
prefig/resources/js/: mj-sre-daemon.js
prefigure-cpp/: CMakeLists.txt  build.sh
prefigure-cpp/bindings/: module.cpp  py_diagram.cpp  py_parse.cpp  py_types.cpp
prefigure-cpp/docs/: Doxyfile  Makefile  conf.py  index.rst  requirements.txt
prefigure-cpp/docs/api/: annotations.rst  axes.rst  ctm.rst  diagram.rst  diffeqs.rst  elements.rst  expression.rst  index.rst  labels.rst  network.rst  parse.rst  shapes.rst  types.rst  utilities.rst
prefigure-cpp/docs/guide/: architecture.rst  building.rst  coordinate_transforms.rst  element_handlers.rst  expression_eval.rst  implicit_curves.rst  index.rst  label_system.rst  network_layouts.rst  ode_solver.rst  porting_guide.rst  profiling.rst  python_bindings.rst  testing.rst
prefigure-cpp/include/prefigure/: annotations.hpp  area.hpp  arrow.hpp  axes.hpp  calculus.hpp  circle.hpp  clip.hpp  coordinates.hpp  ctm.hpp  definition.hpp  diagram.hpp  diffeqs.hpp  graph.hpp  grid_axes.hpp  group.hpp  image.hpp  implicit.hpp  label.hpp  label_tools.hpp  legend.hpp  line.hpp  math_utilities.hpp  network.hpp  parametric_curve.hpp  parse.hpp  path_element.hpp  point.hpp  polygon.hpp  prefigure.hpp  read.hpp  rectangle.hpp  repeat.hpp  riemann_sum.hpp  shape.hpp  slope_field.hpp  statistics.hpp  tags.hpp  tangent_line.hpp  types.hpp  user_namespace.hpp  (+2 more)
prefigure-cpp/scripts/: benchmark.sh  generate_golden.py
prefigure-cpp/src/: annotations.cpp  area.cpp  arrow.cpp  axes.cpp  calculus.cpp  circle.cpp  clip.cpp  coordinates.cpp  ctm.cpp  definition.cpp  diagram.cpp  diffeqs.cpp  graph.cpp  grid_axes.cpp  group.cpp  image.cpp  implicit.cpp  label.cpp  label_tools.cpp  legend.cpp  line.cpp  math_utilities.cpp  network.cpp  parametric_curve.cpp  parse.cpp  path_element.cpp  point.cpp  polygon.cpp  read.cpp  rectangle.cpp  repeat.cpp  riemann_sum.cpp  shape.cpp  slope_field.cpp  statistics.cpp  tags.cpp  tangent_line.cpp  user_namespace.cpp  utilities.cpp  vector_element.cpp
prefigure-cpp/tests/: CMakeLists.txt  test_calculus.cpp  test_cpp_backend.py  test_ctm.cpp  test_diagram_integration.cpp  test_golden.cpp  test_math_utilities.cpp  test_user_namespace.cpp
webdemo/: Dockerfile  README.md  server.py
webdemo/static/: index.html
